<resources>
    <string name="app_name">CSE248 Garage</string>
    <string name="edit_message">Enter name</string>
    <string name="button_login">Login</string>
    <string name="welcome_message">Weclome to Mikes Garage</string>
    <string name="setupGarage">Setup your Garage</string>
    <string name="carSpaces">Car Spaces</string>
    <string name="truckSpaces">Truck Spaces</string>
    <string name="motorcycleSpaces">Motorcycle Spaces</string>
    <string name="carSpacesHint">Enter number of Car Spaces</string>
    <string name="truckSpacesHint">Enter number of Truck Spaces</string>
    <string name="motorcycleSpacesHint">Enter number of motorcycle spaces</string>
    <string name="createGarageButton">Create Garage</string>
    <string name="paymentScheme">Payment Scheme</string>
    <string name="Car">Car</string>
    <string name="Truck">Truck</string>
    <string name="Motorcycle">Motorcycle</string>
    <string name="category">Category</string>
    <string name="earlybird">EarlyBird</string>
    <string name="perhour">PerHour</string>
    <string name="next">Next</string>
    <string name="CreateAttendants">Create Attendants</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="createAttendant">Create Attendant</string>
    <string name="Finish">Finish</string>
    <string name="parkVehicle">"Park "</string>
    <string name="enterLicense">License Plate</string>
    <string name="licenseHint">enter a license plate number...</string>
    <string name="enterCategory">Category</string>
    <string name="categoryHint">car, truck or motorcycle</string>
    <string name="Park">Park</string>
    <string name="removeVehicle">Retrieve</string>
    <string name="earlyBird">EarlyBird</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="printTicket">Print Ticket</string>
    <string name="done">done</string>
    <string name="logOut">Log Out</string>
    <string name="parkremove">Park/Remove Vehicle</string>
    <string name="saveGarage">Save Garage</string>
    <string name="LoadGarage">Load Garage</string>
    <string name="addAttendant">"Add "</string>
    <string name="removeAttendant">"Remove "</string>
    <string name="viewgarage">View Garage</string>
    <string name="display">display</string>
    <string name="cardisplayHint">C = Car</string>
    <string name="truckdisplayhint">T = Truck</string>
    <string name="motodisplayHint">M = Motorcycle</string>
    <string name="DisplayAttendants">Display Attendants</string>
    <string name="printReciept">Print Reciept</string>
    <string name="DisplayRecords">Display Records</string>
    <string name="plateHistory">Plate Numbers:</string>
    <string name="vehicle">Vehicles</string>
    <string name="Attendant">Attendants</string>
    <string name="usernamehint">enter a username...</string>
    <string name="carspaces">Car Spaces</string>
</resources>
